<resources>
    <!--    app name and activities names-->
    <string name="app_name">BookWorms</string>
    <string name="app_logo">App Logo</string>
    <string name="activity_main_title">Welcome to BookWorms</string>
    <string name="activity_signup_title">Signup</string>
    <string name="activity_login_title">Login</string>

    <!--    Login and Signup strings-->

    <string name="user_name">User name</string>
    <string name="enter_user_name">Enter your user name</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter your email</string>

    <string name="phone">Phone</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="already_have_account">Already have an account? Log in!</string>
    <string name="not_registered_yet">Not Registered Yet? Sign up!</string>

    <string name="login_title">Are you a Bookworm?</string>
    <string name="login_subtitle">Login to start exploring</string>
    <string name="remember_me">Remember me</string>

    <string name="signup_title">Become a Bookworm</string>
    <string name="signup_subtitle">Sign up to start exploring</string>


    <string name="signup_button">Sign Up</string>
    <string name="login_button">Login</string>
    <string name="home_page_button">Home</string>
    <string name="profile_page_button">Profile</string>
    <string name="about_page_button">About Us</string>

    <string name="book_item_title">Book Title</string>
    <string name="book_item_author">Author:</string>
    <string name="book_item_image">Image</string>
    <string name="book_item_genres">Genres:</string>
    <string name="book_item_rating">Rating:</string>
    <string name="book_item_description">Description:</string>

    <string name="profile_title">Profile</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="profile_image">Profile Image</string>
    <string name="profile_image_description">Upload your profile image</string>
    <string name="profile_change_image">Change your profile image</string>

    <string name="profile_user_name">User Name:</string>
    <string name="profile_example_user_name">Israel Israeli</string>
    <string name="profile_edit_user_name">Edit User Name</string>

    <string name="profile_phone">Phone:</string>
    <string name="profile_phone_example">0501234567</string>
    <string name="profile_edit_phone">Edit Phone Number</string>

    <string name="profile_date_joined">Joined At:</string>
    <string name="profile_example_date_joined">01/06/2024</string>
    <string name="profile_edit_date_joined">Edit Date Joined</string>

    <string name="profile_bio">Bio:</string>
    <string name="profile_example_bio">I love reading books!</string>
    <string name="profile_edit_bio">Edit Bio</string>

    <string name="profile_email">Email:</string>
    <string name="profile_example_email">Israel@israeli.com</string>
    <string name="profile_edit_email">Edit Email</string>

    <string name="profile_address">Address:</string>
    <string name="profile_example_address">1234 Main St, Los Angeles, CA 90007</string>
    <string name="profile_edit_address">Edit Address</string>


    <string name="logout_button">Logout</string>
    <string name="profile_my_posts">My Posts</string>


    <string name="books_fragment_title">Books</string>
    <string name="no_books_available">No Books Available</string>


    <!--    book details and post details strings-->
    <string name="book_title">Book Title</string>
    <string name="enter_book_title">Enter book title</string>
    <string name="book_author">Author</string>
    <string name="enter_book_author">Enter book author</string>
    <string name="book_genres">Genres</string>
    <string name="enter_book_genres">Enter book genres</string>
    <string name="book_rating">Rating</string>
    <string name="enter_book_rating">Enter book rating</string>
    <string name="book_image">Image</string>
    <string name="no_image_available">No Image Available</string>
    <string name="upload_image">Upload Image</string>
    <string name="camera_button">Camera Button</string>
    <string name="book_description">Description</string>
    <string name="enter_book_description">Enter book description</string>
    <string name="post_title">Post title</string>
    <string name="enter_post_title">Enter post title</string>
    <string name="post_description">Post Description</string>
    <string name="enter_post_description">Enter post description</string>
    <string name="post_author">Post Author</string>
    <string name="enter_owner_name">Enter book owner name</string>

    <!--    navigation strings-->
    <string name="menu_navbar_home">Home</string>
    <string name="menu_navbar_profile">Profile</string>
    <string name="menu_navbar_my_posts">My Posts</string>
    <string name="menu_navbar_map">Map</string>
    <string name="menu_navbar_add_post">Add Post</string>

    <string name="go_back_arrow">Go Back</string>
    <string name="about_page_content">"This is the \"BookWorms\" application. This app is a social media platform for book lovers, exchanging books and search for interesting books nearby. You can publish a post about your favorite book, write your review about it and rate. You can also pin a location for your post about a specific book. With that, you and other users can exchange books, for FREE! That is the whole point of \"BookWorms\" - Read, Publish, Exchange. "</string>
    <string name="profile_save_changes">Save</string>



</resources>