<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/fragmentMainLayout"
    android:id="@+id/nav_graph">

    <fragment
        android:id="@+id/fragmentMainLayout"
        android:name="com.example.bookworms.fragments.MainFragment"
        android:label="@string/activity_main_title"
        tools:layout="@layout/fragment_main" >

        <action
            android:id="@+id/action_mainFragment_to_homePageFragment"
            app:destination="@id/homePageFragment" />
    </fragment>

    <fragment
        android:id="@+id/homePageFragment"
        android:name="com.example.bookworms.fragments.HomePageFragment"
        android:label="@string/activity_main_title"
        tools:layout="@layout/fragment_home_page" >

        <action
            android:id="@+id/action_homePageFragment_to_profilePageFragment"
            app:destination="@id/profilePageFragment" />

        <action
            android:id="@+id/action_homePageFragment_to_myPostsFragment"
            app:destination="@id/myPostsFragment" />

        <action
            android:id="@+id/action_homePageFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />

    </fragment>

    <fragment
        android:id="@+id/profilePageFragment"
        android:name="com.example.bookworms.fragments.ProfilePageFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/fragment_profile_page">

        <action
            android:id="@+id/action_profilePageFragment_to_editProfilePageFragment"
            app:destination="@id/editProfilePageFragment" />

        <action
            android:id="@+id/action_profilePageFragment_to_myPostsFragment"
            app:destination="@id/myPostsFragment" />
    </fragment>

    <fragment
        android:id="@+id/addPostFragment"
        android:name="com.example.bookworms.fragments.AddPostFragment"
        android:label="@string/menu_navbar_add_post"
        tools:layout="@layout/fragment_add_post_page">
    </fragment>

    <fragment
        android:id="@+id/myPostsFragment"
        android:name="com.example.bookworms.fragments.MyPostsFragment"
        android:label="@string/profile_my_posts"
        tools:layout="@layout/fragment_my_posts">

        <action
            android:id="@+id/action_myPostsFragment_to_addPostFragment"
            app:destination="@id/addPostFragment" />
    </fragment>

    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.example.bookworms.fragments.MapsFragment"
        android:label="@string/menu_navbar_map"
        tools:layout="@layout/fragment_maps">

    </fragment>

    <fragment
        android:id="@+id/editProfilePageFragment"
        android:name="com.example.bookworms.fragments.EditProfilePageFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile_page">

        <action
            android:id="@+id/action_editProfilePageFragment_to_profilePageFragment"
            app:destination="@id/profilePageFragment" />

    </fragment>

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.bookworms.fragments.AboutFragment"
        android:label="@string/about_page_content"
        tools:layout="@layout/fragment_about_page" />

</navigation>