<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bookListItem"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:background="@color/cream"
    android:foreground="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/recyclerItemBookTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/book_item_title"
        android:textSize="24sp"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerItemImage"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/recyclerItemImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/img_place_holder_book"
        app:layout_constraintTop_toBottomOf="@id/recyclerItemBookTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recyclerItemBookAuthor"
        app:shapeAppearanceOverlay="@style/RoundCorner" />

    <TextView
        android:id="@+id/recyclerItemBookAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/book_item_author"
        android:textSize="16sp"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/recyclerItemImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerItemBookGenres"/>

    <TextView
        android:id="@+id/recyclerItemBookGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/book_item_genres"
        android:textSize="16sp"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/recyclerItemBookAuthor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/recyclerItemBookRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/book_item_rating"
        android:textSize="16sp"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/recyclerItemBookGenres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recyclerItemBookDescription"/>

    <TextView
        android:id="@+id/recyclerItemBookDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/book_item_description"
        android:textSize="16sp"
        android:textColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/recyclerItemBookRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/recyclerItemGameSeparatorView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerItemBookDescription"
        android:background="@color/purple_700"/>

</androidx.constraintlayout.widget.ConstraintLayout>