<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:orientation="vertical"
    android:id="@+id/addPostFragment"
    tools:context=".fragments.AddPostFragment">

   <ScrollView
        android:id="@+id/addPostScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        android:paddingTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/addPostLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="13dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/goBackIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_arrow_back"
                android:contentDescription="@string/go_back_arrow"
                android:clickable="true"
                android:focusable="true"
                android:padding="8dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="150dp"
                app:cardElevation="10dp"
                android:background="@drawable/ic_profile">

                <ImageView
                    android:id="@+id/addPostImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/no_image_available"
                    android:src="@drawable/no_image"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    android:layout_gravity="center" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/addPostUploadBookImageLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="end|center_horizontal"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/addPostUploadBookImageBtn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/img_search"
                    android:contentDescription="@string/upload_image"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="10dp"/>

            </LinearLayout>

            <LinearLayout
               android:id="@+id/addPostFormLayout"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/white"
               android:orientation="vertical"
               android:gravity="center_vertical"
               android:paddingTop="20dp"
               android:paddingBottom="40dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/post_title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="center_horizontal"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black" >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/post_title_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_post_title" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/post_description_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/post_description_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_post_description" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/book_owner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:layout_gravity="center_horizontal">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/book_owner_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_owner_name" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addPostButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/menu_navbar_add_post"
                    android:textSize="18sp"
                    android:layout_margin="10dp"
                    app:layout_constraintTop_toBottomOf="@id/post_description_layout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </LinearLayout>





        </androidx.appcompat.widget.LinearLayoutCompat>
   </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>